--- a/Readme
+++ b/Readme
@@ -2,3 +2,6 @@ Following attached code includes file
 ApexP0Exercise.txt which contains problems 1-8 with given method name
 Project0Object.txt which contains 3 org methods which updates an account to have either accountOverdrawn, accountTransaction, 
 and activateTransaction
+
+admin user: oscarsu18@brave-shark-9ggmmd.com
+password: crackers23
